[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linesim"
version = "0.2.2"
authors = [
  { name="Eduard Tanase", email="eduard.tanase1@gmail.com" },
]
description = "A package allowing testing of line following code"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame>=2.1.2; python_version<'3.11'",
    "pygame>=2.1.3-dev8; python_version>='3.11'"
]

[project.urls]
"Homepage" = "https://github.com/meme8383/linesim"
"Bug Tracker" = "https://github.com/meme8383/linesim/issues"